@@ -39,4 +39,4 @@ edif.c : edif.y
 
 clean :
 	rm *.o edif.c edif.output edif.tab.c edif.tab.h e2sch e2net ppedif 
-	rm *.lib  examples/*.sch
+	rm *.lib  examples/*.sch examples/*.pro	
